--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,8 @@
     "mongoose": "^8.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
