--- a/server/package.json
+++ b/server/package.json
@@ -21,11 +21,13 @@
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.7",
     "nodemon": "^3.1.0",
